[package]
name = "harrison-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# No way I need this
dotenvy = "0.15.0"

axum = "0.8.7"

reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
base64 = "0.22.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
